2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: added custom sql for reports a some sqls querys:
	Monitoring Report Agent, Monitoring Report Modules and
	Monitoring Report Alerts.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: cleaned source code style.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: fixed when the filter stanby not exist.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: in function "check_sql" added some changes in
	the regular expression for pass the pandora field "delete_pending".

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/reporting.ajax.php: fixed copy&paste mistake.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: in function "string2image" fixed when the string
	have slash characters.
	
	* extensions/agents_modules.php: cleaned source code style.

2010-12-23  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/et.mo
	include/languages/pt_BR.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/ko.po
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/en_AU.mo
	include/languages/bg.mo
	include/languages/index.po
	include/languages/bn.po
	include/languages/nb.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/en.po
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/mr.po
	include/languages/ca.po
	include/languages/da.po
	include/languages/tr.po
	include/languages/sv.po
	include/languages/de.po
	include/languages/ja.po
	include/languages/zh_TW.po